rns-lang/tests/snapshots/error-lexer-directives-dot_space_wasm.snap.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method
    . whaaat?
.end
----- STDERR -----
Error: unexpected character
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/directives/dot_space.ja:2:6 ]
   │
 2 │     . whaaat?
   │      ┬  
   │      ╰── found ' ' here
   │ 
   │ Note: Expected one of the directives: .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
