rns-lang/tests/snapshots/error-lexer-directives-dot_string_literal_wasm.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
."Hello@World!"      ;;;;;;;;;; -_-
----- STDERR -----
Error: unknown directive
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/directives/dot_string_literal.ja:1:1 ]
   │
 1 │ ."Hello@World!"      ;;;;;;;;;; -_-
   │ ───────┬───────  
   │        ╰───────── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
