rns-lang/tests/snapshots/error-lexer-directives-dot_tab.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.	
.end
----- STDERR -----
Error: unexpected character
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/directives/dot_tab.ja:1:2 ]
   │
 1 │ .
   │  ┬  
   │  ╰── found '\t' here
   │ 
   │ Note: Expected one of the directives: .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
