rns-lang/tests/snapshots/error-lexer-directives-unknown_directive_as_second_token_wasm.snap.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class .unknown_directive HelloWorld
.end
----- STDERR -----
Error: unknown directive
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/directives/unknown_directive_as_second_token.ja:1:8 ]
   │
 1 │ .class .unknown_directive HelloWorld
   │        ─────────┬────────  
   │                 ╰────────── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
