rns-lang/tests/snapshots/error-lexer-integers-hex_prefix_werror.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.code 0x123
----- STDERR -----
Error: invalid integer
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/integers/hex_prefix.ja:1:7 ]
   │
 1 │ .code 0x123
   │       ──┬──  
   │         ╰──── '0x123' contains invalid characters
   │ 
   │ Note: Hexadecimal numbers are not supported yet, but are planned for the future.
───╯
----- HASH -----
not generated
